# Crew

./: Readme.md
eneterprise/crew_automation_feedback_processing_system/: .env  README.md  pyproject.toml
eneterprise/crew_automation_feedback_processing_system/src/crew_automation_feedback_processing_system/: crew.py  main.py
eneterprise/crew_automation_feedback_processing_system/src/crew_automation_feedback_processing_system/config/: agents.yaml  tasks.yaml
feedback_agent_flow/: .envexample  .gitignore  README.md  pyproject.toml
feedback_agent_flow/src/feedback_agent_flow/: __init__.py  app.py  main.py  main1.py
feedback_agent_flow/src/feedback_agent_flow/crews/feedback_crew/: feedback_crew.py  poem_crew.py
feedback_agent_flow/src/feedback_agent_flow/crews/feedback_crew/config/: agents.yaml  tasks.yaml
feedback_agent_flow/src/feedback_agent_flow/tools/: custom_tool.py
my_fist_flow/: README.md  poem.txt  pyproject.toml
my_fist_flow/myenv/: pyvenv.cfg
my_fist_flow/myenv/Scripts/: activate  activate.bat
my_fist_flow/src/my_fist_flow/: main.py
