[project]
name = "crew_automation_feedback_processing_system"
version = "0.1.0"
description = "crew_automation_feedback_processing_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crew_automation_feedback_processing_system = "crew_automation_feedback_processing_system.main:run"
run_crew = "crew_automation_feedback_processing_system.main:run"
train = "crew_automation_feedback_processing_system.main:train"
replay = "crew_automation_feedback_processing_system.main:replay"
test = "crew_automation_feedback_processing_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
